<resources>
    <string name="actionbar_name">About Us</string>
    <string name="app_name">18FOTCA11039</string>
    <string name="about_us">About Us</string>
    <string name="_18fotca11039">18FOTCA11039</string>
    <string name="akshay">Akshay</string>
    <string name="talala_gir">Talala-Gir</string>
    <string name="asorathiya367_rku_ac_in">asorathiya367@rku.ac.in</string>
    <string name="sorathiya">Sorathiya</string>
    <string name="dineshbhai">Dineshbhai</string>
    <string name="password">************</string>
    <string name="todo">TODO</string>
</resources>