<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/icons"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="215dp"
            android:contentDescription="@string/todo"
            android:paddingTop="15dp"
            app:srcCompat="@drawable/dsc" />

        <TextView
            android:id="@+id/txtenrollno"
            style="@style/myTextView"
            android:gravity="center_horizontal"
            android:text="@string/_18fotca11039"
            android:textColor="@color/secondary_text"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/txtfname"
            style="@style/myTextView"
            android:text="@string/akshay"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/txtmname"
            style="@style/myTextView"
            android:text="@string/dineshbhai"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/txtlname"
            style="@style/myTextView"
            android:text="@string/sorathiya"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/email"
            style="@style/myTextView"
            android:text="@string/asorathiya367_rku_ac_in"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/txtpasword"
            style="@style/myTextView"
            android:text="@string/password"
            android:textColor="@color/secondary_text" />

        <TextView
            android:id="@+id/txtcity"
            style="@style/myTextView"
            android:text="@string/talala_gir"
            android:textColor="@color/secondary_text" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>